--- a/firebase/index.html
+++ b/firebase/index.html
@@ -10,7 +10,7 @@
   <style>
     :root{
       --bg: #6276b8;
-      --panel: rgba(255,255,255,.06);
+      --panel: rgba(255, 255, 255, 0.06);
       --panel2: rgba(255,255,255,.10);
       --text: rgba(255,255,255,.92);
       --muted: rgba(255,255,255,.70);
