color change to white

--- a/firebase/index.html
+++ b/firebase/index.html
@@ -422,6 +422,7 @@
     .pill{
       border:1px solid var(--line);
       background: var(--panel);
+      color: white;
       padding: 8px 10px;
       border-radius: 999px;
       font-weight:850;
