--- a/firebase/index.html
+++ b/firebase/index.html
@@ -202,6 +202,7 @@
     }
     .headline{
       margin:0;
+      color: white;
       font-size: 40px;
       line-height: 1.05;
       letter-spacing: -0.8px;
