--- a/firebase/index.html
+++ b/firebase/index.html
@@ -100,8 +100,7 @@
     <div id="warning">⚠️ ERREUR CRITIQUE : DISQUE DUR EFFACÉ ⚠️</div>
     
     <div class="joke-message" id="joke">
-        C'est une blague ! <br> 
-        Pense à verrouiller ta session la prochaine fois. 😉
+        Mais non it is a joke 😉! <br> 
     </div>
 
     <script>
