Page rançonnage latest

--- a/firebase/index.html
+++ b/firebase/index.html
@@ -137,10 +137,9 @@
         <div class="warning-icon">⚠️</div>
         <h1>VOS DONNÉES SONT CHIFFRÉES</h1>
         <p>
-            Une vulnérabilité critique a été exploitée sur votre système. <br>
-            Toutes vos photos, documents et bases de données sont désormais inaccessibles.
+            Toutes vos données sont désormais inaccessibles et cryptées. <br>
         </p>
-        <div class="price">MONTANT À RÉGLER : 10 000 €</div>
+        <div class="price">MONTANT À RÉGLER : 15 000 €</div>
         <div class="timer-box">
             Temps restant avant suppression : <span id="timer">23:59:59</span>
         </div>
@@ -151,12 +150,12 @@
     </div>
 
     <div id="joke-message">
-        <div class="joke-text">C'EST UNE BLAGUE ! 😂</div>
+        <div class="joke-text">Non je rigole !</div>
         <div class="instruction">
-            Mais n'oublie pas de verrouiller ta session la prochaine fois ! <br>
+           it is a joke ! <br>
             <small style="color: gray; font-size: 0.9rem;">(Appuie sur F11 pour quitter le plein écran)</small>
         </div>
-        <button onclick="window.location.reload()" style="margin-top: 40px; background: transparent; border: 1px solid #00ff00; color: #00ff00; cursor: pointer; padding: 10px;">Recommencer la farce</button>
+        <button onclick="window.location.reload()" style="margin-top: 40px; background: transparent; border: 1px solid #00ff00; color: #00ff00; cursor: pointer; padding: 10px;">Revenir en arrière</button>
     </div>
 
     <script>
